[package]
name = "wst"
version = "0.1.0"
authors = ["discosultan"]
description = "WebSocket Tools"
edition = "2024"
keywords = ["websocket"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/discosultan/wst"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
http = "1"
rustls = { version = "0.23" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
